--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -15,5 +15,5 @@ steps:
   - --entry-point=get_net_salary
   - --max-instances=10
   - --set-secrets=TBOT_TOKEN=tbot-net-salary-token:1
-  - --set-env-vars=REGION=${_REGION},CHAT_ID=${_CHAT_ID}
+  - --set-env-vars=REGION=${_REGION}
   - --timeout=540s
