--- a/.github/workflows/deploy-gcloud-function.yml
+++ b/.github/workflows/deploy-gcloud-function.yml
@@ -17,7 +17,7 @@ jobs:
       uses: docker://google/cloud-sdk:alpine
       with:
         entrypoint: /bin/sh
-        args: -c echo $GCP_PROJECT_ID && echo $GCP_SA_KEY /tmp/keyfile.json && gcloud auth activate-service-account --key-file=/tmp/keyfile.json'
+        args: -c echo $GCP_PROJECT_ID #&& echo $GCP_SA_KEY /tmp/keyfile.json && gcloud auth activate-service-account --key-file=/tmp/keyfile.json'
       env:
         GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
         GCP_PROJECT_ID: ${{ env.GCP_PROJECT_ID }}
