--- a/.github/workflows/deploy-gcloud-function.yml
+++ b/.github/workflows/deploy-gcloud-function.yml
@@ -17,18 +17,18 @@ jobs:
       uses: docker://google/cloud-sdk:alpine
       with:
         entrypoint: /bin/sh
-        args: -c echo $GCP_PROJECT_ID #&& echo $GCP_SA_KEY /tmp/keyfile.json && gcloud auth activate-service-account --key-file=/tmp/keyfile.json'
+        args: -c echo $GCP_SA_KEY /tmp/keyfile.json && gcloud auth activate-service-account --key-file=/tmp/keyfile.json'
       env:
         GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+
+    - name: Deploy Cloud Function
+      run: |
+        echo "Hello world!"
+        # gcloud functions deploy yourFunctionName \
+        #   --runtime python311 \
+        #   --trigger-http \
+        #   --allow-unauthenticated \
+        #   --project $GCP_PROJECT_ID
+      env:
         GCP_PROJECT_ID: ${{ env.GCP_PROJECT_ID }}
 
-    # - name: Deploy Cloud Function
-    #   run: |
-    #     echo "Hello world!"
-    #     # gcloud functions deploy yourFunctionName \
-    #     #   --runtime python311 \
-    #     #   --trigger-http \
-    #     #   --allow-unauthenticated \
-    #     #   --project $GCP_PROJECT_ID
-    #   env:
-    #     GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
