--- a/.github/workflows/deploy-gcloud-function.yml
+++ b/.github/workflows/deploy-gcloud-function.yml
@@ -14,10 +14,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Google Cloud SDK
-      uses: docker://google/cloud-sdk:alpine
+      uses: google-github-actions/setup-gcloud@master
       with:
-        entrypoint: /bin/sh
-        args: -c echo $GCP_SA_KEY /tmp/keyfile.json && gcloud auth activate-service-account --key-file=/tmp/keyfile.json'
+        service_account_key: $GCP_SA_KEY
+        export_default_credentials: true
       env:
         GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
 
@@ -31,6 +31,3 @@ jobs:
           --gen2 \
           --entry-point=get_net_salary \
           --service-account=function-runner@net-salary-bot-fg.iam.gserviceaccount.com
-      env:
-        GCP_PROJECT_ID: ${{ env.GCP_PROJECT_ID }}
-
