--- a/.github/workflows/deploy-gcloud-function.yml
+++ b/.github/workflows/deploy-gcloud-function.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@master
+      uses: google-github-actions/setup-gcloud
       with:
         service_account_key: $GCP_SA_KEY
         export_default_credentials: true
