--- a/.github/workflows/deploy-gcloud-function.yml
+++ b/.github/workflows/deploy-gcloud-function.yml
@@ -13,21 +13,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v2
+    - name: Configure Gcloud Credentials
+      uses: google-github-actions/auth@v2
       with:
-        service_account_key: $GCP_SA_KEY
-        export_default_credentials: true
-      env:
-        GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
-
-    - name: Deploy Cloud Function
-      run: |
-        gcloud functions deploy function-test \
-          --runtime python311 \
-          --trigger-http \
-          --allow-unauthenticated \
-          --region europe-west8 \
-          --gen2 \
-          --entry-point=get_net_salary \
-          --service-account=function-runner@net-salary-bot-fg.iam.gserviceaccount.com
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
